spade-tests/src/snapshots/spade_tests__ast_lowering__wire_targets_must_be_types.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test(x: &2) {}


error: Unexpected `integer`, expected `type`
  ┌─ testinput:1:13
  │
1 │ fn test(x: &2) {}
  │             ^ expected `type`
